2009-04-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix handling of multiple sources / objects on the command line for
	`slc'.
	
	* bin/slc.in: Fix substitution of separator in dependency list
	when processing a single step of the build chain.

2009-04-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify use of `slr'.
	
	* bin/slr.in: Reinstate possibility to specify program variables
	directly by specifying the variable name, next to (in addition to)
	-d. Update documentation accordingly.

	* demo/fft.sl,
	* demo/fibonacci.sl,
	* demo/roman.sl,
	* tests/1_basic/0_slr_args/args.sl,
	* tests/1_basic/2_div/div.sl: Simplify accordingly.

2009-04-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve printf(). 

	Until now printf() would expect all integers to be passed as "long
	long", and all floats to be passed as "double", which required
	explicit casts for arguments of other types. This is now
	corrected, by having the size of each argument computed at the
	point of use and passed as argument to printf. The interface now
	looks and feels more C's native printf().

	* include/cstdint.slh,
	* include/svp/argslot.slh,
	* include/svp/io.slh,
	* include/svp/iomacros.slh,
	* lib/svplib/io.sl: Fix printf.

	* demo/answer.sl,
	* demo/10threads.sl,
	* demo/fft.sl,
	* tests/1_basic/0_slr_args/args.sl: Simplify accordingly.	

2009-04-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Code cleanup.
	
	* include/slr.slh: Give the type of the input data structure a
	name. This prevents a compiler warning when compiling via
	C++. Have slr_var take the type before the variable name, as is
	customary in C.

	* demo/roman.sl,
	* demo/fibonacci.sl,
	* demo/fft.sl,
	* tests/1_basic/0_slr_args/args.sl,
	* tests/1_basic/2_div/div.sl: Update accordingly.

2009-04-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve documentation.
	
	* bin/slr.in: Better documentation.
	
	* bin/sag: Better handle listing of program variables.

	* doc/NEWS.txt: Mention `slr'.
