@@ -16,18 +16,31 @@
 			 : "0"(__sl_shparm_in_ ## Name));		\
     __sl_shparm_in_ ## Name;						\
   })
+
 #define __sl_setshp(Name, Value)					\
   ({									\
-    __typeof__(Value) __tmp_setsh = (Value);				\
-    __asm__ __volatile__("# MT: start write shared " # Name " (%1) <- " # Value " (and clobber incoming %0)" \
-			 : /* ensure incoming shared is marked clobbered */ \
-			   "=rf" (__sl_shparm_in_ ## Name)		\
-			 : "rf"(__sl_shparm_out_ ## Name));		\
-    __sl_shparm_out_ ## Name = __tmp_setsh;				\
+     __asm__ __volatile__("# MT: start write shared " # Name " (%1) <- " # Value " (and clobber incoming %0)" \
+ 			 : /* ensure incoming shared is marked clobbered */ \
+			   "=rf" (__sl_shparm_in_ ## Name), "=rf"(__sl_shparm_out_ ## Name) \
+			  : "0"(__sl_shparm_in_ ## Name), "1"(__sl_shparm_out_ ## Name)); \
+    __sl_shparm_out_ ## Name = (Value);					\
     __asm__ __volatile__("# MT: end write shared " # Name " (%0)"	\
-			 : "=rf" (__sl_shparm_out_ ## Name)		\
-			 : "0"(__sl_shparm_out_ ## Name));		\
+			 : "=rf" (__sl_shparm_out_ ## Name), "=rf" (__sl_shparm_in_ ## Name) \
+			 : "0"(__sl_shparm_out_ ## Name), "1" (__sl_shparm_in_ ## Name)); \
   })
+
+// #define __sl_setshp(Name, Value)					\
+//   ({									\
+//     __typeof__(Value) __tmp_setsh = (Value);				\
+//     __asm__ __volatile__("# MT: start write shared " # Name " (%1) <- " # Value " (and clobber incoming %0)" \
+// 			 : /* ensure incoming shared is marked clobbered */ \
+// 			   "=rf" (__sl_shparm_in_ ## Name)		\
+// 			 : "rf"(__sl_shparm_out_ ## Name));		\
+//     __sl_shparm_out_ ## Name = __tmp_setsh;				\
+//     __asm__ __volatile__("# MT: end write shared " # Name " (%0)"	\
+// 			 : "=rf" (__sl_shparm_out_ ## Name)		\
+// 			 : "0"(__sl_shparm_out_ ## Name));		\
+//   })
 
 
 #define __sl_getsha(Name) __sl_sharg_ ## Name
